Explorer: fix background on mobile 2

--- a/festival/scss/style.scss
+++ b/festival/scss/style.scss
@@ -83,23 +83,6 @@ $accordion-button-active-icon: url("data:image/svg+xml,<svg xmlns='http://www.w3
 
 @import "../node_modules/bootstrap/scss/bootstrap";
 
-/* Fixed background for tablet and mobile */
-@media all and (max-width:1024px) {
-    selector:after {
-        content: '';
-        width: 100%;
-        height: 100%;
-        background-position: inherit;
-        background-image: inherit;
-        background-size: inherit;
-        background-attachment: inherit;
-        background-repeat: inherit;
-        position: fixed;
-        top: 0;
-        z-index: -1;
-    }
-}
-
 html, body {
   height: 100%;
   color: $gray-400;
@@ -126,12 +109,24 @@ html, body {
     background-color: $myPrimary !important;
 }
 
+body:before {
+    content: "";
+    display: block;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -10;
+    background: url("../media/background-img3.jpg") no-repeat center center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
 body {
-    background-image: url("../media/background-img3.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    background-size: 100% auto;
+    
 
     font-family: Arial, Helvetica, sans-serif;
     color: lightgrey;
